if ENNA_BUILD_THEME

MAINTAINERCLEANFILES = Makefile.in

EDJE_CC = edje_cc

EDJE_FLAGS = \
-v \
-id $(top_srcdir)/data/theme/default/images \
-fd $(top_srcdir)/data/theme/default/fonts

defaultdir = $(pkgdatadir)/theme

default_DATA = default.edj

IMG_ICONS = \
images/arrow_left.png \
images/arrow_right.png \
images/icon_album.png \
images/icon_artist.png \
images/icon_bookstore.png \
images/icon_config.png \
images/icon_directory.png \
images/icon_enna.png \
images/icon_freeboxtv.png \
images/icon_games.png \
images/icon_genre.png \
images/icon_gocomics.png \
images/icon_hd.png \
images/icon_home_mini.png \
images/icon_infos.png \
images/icon_library.png \
images/icon_module.png \
images/icon_music.png \
images/icon_music_mini.png \
images/icon_nofile.png \
images/icon_onemanga.png \
images/icon_photo.png \
images/icon_rss.png \
images/icon_shoutcast.png \
images/icon_song.png \
images/icon_upnp.png \
images/icon_video.png \
images/icon_weather.png \
images/unknown_cover.png

IMG_ACTIVITIES = \
images/bg_bookstore.png \
images/bg_default.png \
images/bg_gocomics.png \
images/bg_music.jpg \
images/bg_onemanga.png \
images/bg_photo.jpg \
images/bg_video.jpg \
images/bg_weather.jpg

IMG_DEVICES = \
images/dev_bluetooth.png \
images/dev_camera.png \
images/dev_cdda2.png \
images/dev_cdda.png \
images/dev_cdrom.png \
images/dev_cdrw.png \
images/dev_dvd.png \
images/dev_hdd.png \
images/dev_ipod.png \
images/dev_mem_card.png \
images/dev_tv.png \
images/dev_nfs.png \
images/dev_photo.png \
images/dev_samba.png \
images/dev_usb_stick.png

IMG_CONTROLS = \
images/ctrl_back.png \
images/ctrl_hibernate.png \
images/ctrl_ok.png \
images/ctrl_restart.png \
images/ctrl_shutdown.png \
images/ctrl_warning.png

IMG_FILETYPES = \
images/folder_favorites.png \
images/icon_music.png \
images/icon_photo.png \
images/icon_video.png

IMG_MEDIACONTROLS = \
images/go-first.png \
images/go-last.png \
images/icon_rotate_ccw.png \
images/icon_rotate_cw.png \
images/mp_forward.png \
images/mp_next.png \
images/mp_pause.png \
images/mp_play.png \
images/mp_prev.png \
images/mp_rewind.png \
images/mp_stop.png

IMG_WEATHER = \
images/weather_fall.jpeg \
images/weather_spring.jpeg \
images/weather_summer.jpeg \
images/weather_unknown.png \
images/weather_winter.jpeg

IMG_WEATHER_ICONS = \
images/weather_cloudy.png \
images/weather_foggy.png \
images/weather_heavy_rain.png \
images/weather_ice.png \
images/weather_light_snow.png \
images/weather_rain.png \
images/weather_rain_storm.png \
images/weather_showers.png \
images/weather_snow.png \
images/weather_sun_clouds.png \
images/weather_sun_light_clouds.png \
images/weather_sun_mostly_cloudy.png \
images/weather_sunny.png \
images/weather_sun_rain.png \
images/weather_sun_snow.png \
images/weather_sun_storm.png \
images/weather_windy.png

IMG_RATINGS = \
images/rating0.png \
images/rating1.png \
images/rating2.png \
images/rating3.png \
images/rating4.png \
images/rating5.png

IMG_MOVIE_FLAGS = \
images/flags/audio/dd20.png \
images/flags/audio/dd51.png \
images/flags/audio/dd71.png \
images/flags/audio/dts51.png \
images/flags/audio/dts71.png \
images/flags/audio/mono.png \
images/flags/audio/defaultsound.png \
images/flags/media/bluray.png \
images/flags/media/divx.png \
images/flags/media/dvd.png \
images/flags/media/hdtv.png \
images/flags/media/defaultsource.png \
images/flags/studio/20thcenturyfox.png \
images/flags/studio/artisan.png \
images/flags/studio/carolco.png \
images/flags/studio/castlerock.png \
images/flags/studio/columbia.png \
images/flags/studio/default.png \
images/flags/studio/dimension.png \
images/flags/studio/disney.png \
images/flags/studio/dreamworks.png \
images/flags/studio/filmfour.png \
images/flags/studio/gaumont.png \
images/flags/studio/hollywood.png \
images/flags/studio/lionsgate.png \
images/flags/studio/lucasfilm.png \
images/flags/studio/mgm.png \
images/flags/studio/miramax.png \
images/flags/studio/newlinecinema.png \
images/flags/studio/paramount.png \
images/flags/studio/revolution.png \
images/flags/studio/screengems.png \
images/flags/studio/sonypictures.png \
images/flags/studio/studiocanal.png \
images/flags/studio/touchstone.png \
images/flags/studio/tristar.png \
images/flags/studio/unitedartists.png \
images/flags/studio/universal.png \
images/flags/studio/warner.png \
images/flags/network/abc.png \
images/flags/network/bbc.png \
images/flags/network/cartoon_network.png \
images/flags/network/cbs.png \
images/flags/network/channel4.png \
images/flags/network/citytv.png \
images/flags/network/comedy_central.png \
images/flags/network/fox.png \
images/flags/network/hbo.png \
images/flags/network/lifetime.png \
images/flags/network/living.png \
images/flags/network/nbc.png \
images/flags/network/showtime.png \
images/flags/video/1080i.png \
images/flags/video/1080p.png \
images/flags/video/720i.png \
images/flags/video/720p.png \
images/flags/video/576i.png \
images/flags/video/576p.png \
images/flags/video/540i.png \
images/flags/video/540p.png \
images/flags/video/480i.png \
images/flags/video/480p.png \
images/flags/video/defaultscreen.png \
images/flags/video/sd.png

IMG_COVERS = \
images/cover_music.png \
images/cover_music2.png \
images/cover_video.png \
images/cover_video2.png

FONTS = \
fonts/content.ttf \
fonts/content_bold.ttf

EDC = \
activity_bookstore.edc \
activity_configuration_credits.edc \
activity_configuration.edc \
activity_configuration_sysinfo.edc \
activity_games.edc \
activity_music.edc \
activity_photo.edc \
activity_video_controls.edc \
activity_video.edc \
activity_video_flags.edc \
activity_weather.edc \
browser.edc \
cover_video.edc \
default.edc \
elm.edc \
exit.edc \
icons.edc \
list.edc \
mainmenu.edc \
mediacontrol.edc \
mediaplayer.edc \
notification_volume.edc \
notification_weather.edc \
picture.edc \
popup.edc \
slideshow.edc \
video_info.edc

EXTRA_DIST = \
  $(IMG_ICONS) \
  $(IMG_ACTIVITIES) \
  $(IMG_DEVICES) \
  $(IMG_CONTROLS) \
  $(IMG_FILETYPES) \
  $(IMG_MEDIACONTROLS) \
  $(IMG_WEATHER) \
  $(IMG_WEATHER_ICONS) \
  $(IMG_RATINGS) \
  $(IMG_MOVIE_FLAGS) \
  $(IMG_COVERS) \
  $(FONTS) \
  $(EDC)

default.edj: Makefile $(EXTRA_DIST)
	$(EDJE_CC) $(EDJE_FLAGS) \
	$(top_srcdir)/data/theme/default/default.edc \
	$(top_builddir)/data/theme/default/default.edj

clean-local:
	rm -f *.edj

endif
